--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "serve": "json-server --watch db.json --port 4000",
     "tailwind": "tailwindcss -i ./styles/input.css -o ./styles/globals.css --watch"
   },
   "dependencies": {
@@ -17,6 +18,7 @@
     "axios": "^1.3.2",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
+    "json-server": "^0.17.1",
     "next": "13.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
