--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.3.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "18.16.2",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
@@ -40,7 +42,13 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.2.8"
   }
 }
