--- a/package.json
+++ b/package.json
@@ -30,19 +30,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "^13.3.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "18.16.2",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "axios-cache-interceptor": "^1.0.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "next": "13.3.1",
+    "pokenode-ts": "^1.18.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-loading-skeleton": "^3.2.1",
     "react-redux": "^8.0.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
