--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "axios-cache-interceptor": "^1.0.1",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "next": "13.3.1",
@@ -47,6 +49,7 @@
     "react-icons": "^4.8.0",
     "react-loading-skeleton": "^3.2.1",
     "react-redux": "^8.0.5",
+    "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
