--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "18.16.2",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "@vercel/og": "^0.5.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "axios-cache-interceptor": "^1.0.1",
