--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "next": "13.4.1",
+    "next-pwa": "^5.6.0",
     "pokenode-ts": "^1.18.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
