--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-icons": "^4.8.0",
     "react-loading-skeleton": "^3.2.1",
     "react-redux": "^8.0.5",
+    "sharp": "^0.32.1",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
